@@ -1,3 +1,5 @@
+- Bug Fix: In close debts academic debt generation rules, check if degree curricular plan, active in registration in the execution year, is in the list of DCPs associated with the rule  
+
 8.2.1 (06-12-2021)
 - Improvement: Add academic treasury event type
 - Bug Fix: Check of AcademicTariff.maximumAmount is not negative
